OBS mute continued.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -16729,6 +16729,9 @@
         }
       }
     },
+    "Audio inputs" : {
+
+    },
     "Audio level" : {
       "localizations" : {
         "de" : {
