Start ads on Twitch.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -44174,6 +44174,9 @@
         }
       }
     },
+    "Failed to start commercial" : {
+
+    },
     "Failed to start live stream from DJI device %@" : {
       "localizations" : {
         "de" : {
