--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -5531,6 +5531,16 @@
         }
       }
     },
+    "%@ %@ commercial starting" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ %2$@ commercial starting"
+          }
+        }
+      }
+    },
     "%@ %@: %@" : {
       "localizations" : {
         "de" : {
