Italian translation updated.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -79226,7 +79226,7 @@
         "it" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Remoto"
+            "value" : "Assistente remoto"
           }
         },
         "ja" : {
