--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -115077,6 +115077,9 @@
         }
       }
     },
+    "Will use the scene's video source. The plan is to select any video source here later on." : {
+
+    },
     "Workout" : {
       "localizations" : {
         "de" : {
