Video source widget started.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -31447,6 +31447,9 @@
         }
       }
     },
+    "Corner radius" : {
+
+    },
     "Cosmetics" : {
       "localizations" : {
         "de" : {
