Picker with unknown id.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -107690,6 +107690,9 @@
         }
       }
     },
+    "Unknown 😢" : {
+
+    },
     "Unknown recording state." : {
       "localizations" : {
         "de" : {
